--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,6 +31,10 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+:root {
+    overflow-y: scroll;
+}
+
 a:hover {
     text-decoration: none;
 }
